# tasq

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  convert-things-to-tasq
src/: db.rs  find.rs  main.rs  ui.rs
src/sql/: connect_nodes.sql  create_edges.sql  create_nodes.sql  get_active_nodes.sql  get_children.sql  get_parents.sql  get_roots.sql  insert_node.sql  update_node.sql
src/ui/: util.rs  widgets.rs
