[package]
name = "tasq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
serde = { version = "1.0.156", features = ["derive", "rc"] }
serde_json = "1.0.94"
structopt = "0.3.26"
time = "0.3.20"
