[package]
name = "tasq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-std = "1.12.0"
chrono = { version = "0.4.24", features = ["serde"] }
serde = { version = "1.0.156", features = ["derive", "rc"] }
serde_json = "1.0.94"
sqlx = { version = "0.6.2", features = ["runtime-async-std-native-tls", "sqlite"] }
structopt = "0.3.26"
tempfile = "3.4.0"
time = "0.3.20"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
